force-app/main/default/objects/Soil_Survey__c/Soil_Survey__c.object-meta.xml
<CustomObject>
    <label>Soil Survey</label>
    <nameField>
        <label>Soil Survey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Soil Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>