force-app/main/default/objects/Soil_Survey__c/fields/awc_r__c.field-meta.xml
<CustomField>
    <fullName>awc_r__c</fullName>
    <label>awc_r</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>