force-app/main/default/objects/Soil_Survey__c/fields/aws025wta__c.field-meta.xml
<CustomField>
    <fullName>aws025wta__c</fullName>
    <label>aws025wta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>