force-app/main/default/objects/Soil_Survey__c/fields/chkey__c.field-meta.xml
<CustomField>
    <fullName>chkey__c</fullName>
    <label>chkey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>