force-app/main/default/objects/Soil_Survey__c/fields/cokey__c.field-meta.xml
<CustomField>
    <fullName>cokey__c</fullName>
    <label>cokey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>