force-app/main/default/objects/Soil_Survey__c/fields/compname__c.field-meta.xml
<CustomField>
    <fullName>compname__c</fullName>
    <label>compname</label>
    <length>16</length>
    <type>Text</type>
</CustomField>