force-app/main/default/objects/Soil_Survey__c/fields/drainagecl__c.field-meta.xml
<CustomField>
    <fullName>drainagecl__c</fullName>
    <label>drainagecl</label>
    <length>8</length>
    <type>Text</type>
</CustomField>