force-app/main/default/objects/Soil_Survey__c/fields/ffd_r__c.field-meta.xml
<CustomField>
    <fullName>ffd_r__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>ffd_r</label>
    <length>8</length>
    <type>Text</type>
</CustomField>