force-app/main/default/objects/Soil_Survey__c/fields/geomdesc__c.field-meta.xml
<CustomField>
    <fullName>geomdesc__c</fullName>
    <label>geomdesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>