force-app/main/default/objects/Soil_Survey__c/fields/hzdept_r__c.field-meta.xml
<CustomField>
    <fullName>hzdept_r__c</fullName>
    <label>hzdept_r</label>
    <length>5</length>
    <type>Text</type>
</CustomField>