force-app/main/default/objects/Soil_Survey__c/fields/irrcapcl__c.field-meta.xml
<CustomField>
    <fullName>irrcapcl__c</fullName>
    <label>irrcapcl</label>
    <length>1</length>
    <type>Text</type>
</CustomField>