force-app/main/default/objects/Soil_Survey__c/fields/irrcapscl__c.field-meta.xml
<CustomField>
    <fullName>irrcapscl__c</fullName>
    <label>irrcapscl</label>
    <length>8</length>
    <type>Text</type>
</CustomField>