force-app/main/default/objects/Soil_Survey__c/fields/kwfact__c.field-meta.xml
<CustomField>
    <fullName>kwfact__c</fullName>
    <label>kwfact</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>