force-app/main/default/objects/Soil_Survey__c/fields/mukey__c.field-meta.xml
<CustomField>
    <fullName>mukey__c</fullName>
    <label>mukey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>