force-app/main/default/objects/Soil_Survey__c/fields/muname__c.field-meta.xml
<CustomField>
    <fullName>muname__c</fullName>
    <label>muname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>