force-app/main/default/objects/Soil_Survey__c/fields/musym__c.field-meta.xml
<CustomField>
    <fullName>musym__c</fullName>
    <label>musym</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>