force-app/main/default/objects/Soil_Survey__c/fields/nirrcapcl__c.field-meta.xml
<CustomField>
    <fullName>nirrcapcl__c</fullName>
    <label>nirrcapcl</label>
    <length>1</length>
    <type>Text</type>
</CustomField>