force-app/main/default/objects/Soil_Survey__c/fields/nirrcapscl__c.field-meta.xml
<CustomField>
    <fullName>nirrcapscl__c</fullName>
    <label>nirrcapscl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>