force-app/main/default/objects/Soil_Survey__c/fields/om_r__c.field-meta.xml
<CustomField>
    <fullName>om_r__c</fullName>
    <label>om_r</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>