force-app/main/default/objects/Soil_Survey__c/fields/ph1to1h2o_r__c.field-meta.xml
<CustomField>
    <fullName>ph1to1h2o_r__c</fullName>
    <label>ph1to1h2o_r</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>