force-app/main/default/objects/Soil_Survey__c/fields/runoff__c.field-meta.xml
<CustomField>
    <fullName>runoff__c</fullName>
    <label>runoff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>