force-app/main/default/objects/Soil_Survey__c/fields/slope_r__c.field-meta.xml
<CustomField>
    <fullName>slope_r__c</fullName>
    <label>slope_r</label>
    <length>8</length>
    <type>Text</type>
</CustomField>