force-app/main/default/objects/Soil_Survey__c/fields/tfact__c.field-meta.xml
<CustomField>
    <fullName>tfact__c</fullName>
    <label>tfact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>