force-app/main/default/objects/Soil_Survey__c/fields/wsatiated_r__c.field-meta.xml
<CustomField>
    <fullName>wsatiated_r__c</fullName>
    <label>wsatiated_r</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>