force-app/main/default/objects/Soil_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>om_r__c</columns>
    <columns>awc_r__c</columns>
    <columns>wsatiated_r__c</columns>
    <columns>kwfact__c</columns>
    <columns>ph1to1h2o_r__c</columns>
    <columns>cokey__c</columns>
    <columns>compname__c</columns>
    <columns>slope_r__c</columns>
    <columns>runoff__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>